<?xml version="1.0"?>
<package format="2">
    <name>yqmrcf_common</name>
    <version>0.0.0</version>
    <description>The yqmrcf_common package</description>

    <maintainer email="imoster@todo.todo">imoster</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>yqmrcf_msgs</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
