<?xml version="1.0"?>
<package format="2">
  <name>yqmrcf_msgs</name>
  <version>0.0.0</version>
  <description>The yqmrcf_msgs package</description>
  <maintainer email="imoster@todo.todo">imoster</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
